2004-11-27  Petr Ovtchenkov  <ptr@island...>

	* stlport/stl/_threads.h: direct access to _M_ref_count isn't MT-safe;
	counter value returned by _M_incr and _M_decr methods only.

	* stlport/stl/_rope.h, stlport/stl/_rope.c: adaptation to changes above;
	removed __GC macro dependent code, that was never defined in present
	sources.

	* src/locale.cpp, locale_impl.cpp, locale_impl.h: general revision of locale
	implementation; code clean, corrected, concepts fixed, errors fixed,
	new bugs added.
	
	* src/ctype.cpp, facets_byname.cpp, locale_catalog.cpp, messages.cpp, monetary.cpp:
	ditto.

	* stlport/stl/_codecvt.h, _collate.h, _ctype.h, _locale.h, _messages_facets.h:
	ditto.
	
	* _monetary.h, _num_get.h, _num_put.h, _numpunct.h, _time_facets.h: ditto.

	* src/locale_nonclassic.h: removed due to code revision.

	* src/explore/Makefile.inc: locale.cpp is directly included into locale_impl.cpp.

	* src/explore/gcc.mak, test/unit/gcc.mak: use _STLP_LEAKS_PEDANTIC before release
	by default.
	

2004-11-24  Francois Dumont  <dums@stlport...>

	* stlport/stl/_cmath.h: Fix of the abs definition for the EVC platform
	thanks Michael Fink.

	* stlport/stl/_cmath.h: Fix of the Internal Compiler Error from MSVC6
	when defining math functions in the STLport namespace thanks Ulrich
	Eckhardt and myself.

	* stlport/stl/debug: Creation of a debug iterator traits used to make
	an additional test when checking iterator deferencing status, on slist
	before_begin iterators are not dereferenceable but were not detected
	as so.

	* stlport/math.h, stdexcept: patches from Michael Fink to avoid warning 
	on the EVC platform.

2004-11-22  Francois Dumont  <dums@stlport...>

	* src/explore/Makefiles/nmake/evc3.mak, evc4.mak: removal of the useless 
	/DPLATFORM macro definition thanks Ulrich Eckhardt report and Michael Fink
	patch.

	* stlport/cstdlib: extension of the div overload for long input up to MSVC7.1
	thanks Michael Fink report.
